<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6674BC"
    tools:context=".JeuQuatreQuatreActivity">

    <TextView
        android:id="@+id/txtTitre4"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/allura"
        android:text="@string/questionmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTheme"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/theme"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/txtTitre4"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitre4">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="10dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_4" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="10dp">

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp">

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_10" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_11" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_12" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="10dp">

            <Button
                android:id="@+id/btn13"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_13" />

            <Button
                android:id="@+id/btn14"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_14" />

            <Button
                android:id="@+id/btn15"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_15" />

            <Button
                android:id="@+id/btn16"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/button_16" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtChance"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/bonne_chance"
        android:textAllCaps="true"
        android:textColor="#FF9800"
        android:textSize="18sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitre4" />

</androidx.constraintlayout.widget.ConstraintLayout>