<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#517234CA"
    android:clickable="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitre"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/allura"
        android:text="@string/questionmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="25dp"
        android:text="@string/jouer"
        app:backgroundTint="#E37499"
        app:layout_constraintBottom_toTopOf="@+id/btnParametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitre" />

    <Button
        android:id="@+id/btnParametres"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="25dp"
        android:text="@string/param_tres"
        app:backgroundTint="#BD75DC"
        app:layout_constraintBottom_toTopOf="@+id/btnAPropos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJouer" />

    <Button
        android:id="@+id/btnAPropos"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="223dp"
        android:text="@string/propos"
        app:backgroundTint="#6674BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnParametres" />

</androidx.constraintlayout.widget.ConstraintLayout>