<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6674BC"
    tools:context=".AProposActivity">

    <TextView
        android:id="@+id/txtTitre2"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/allura"
        android:text="@string/questionmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAPropos"
        android:layout_width="351dp"
        android:layout_height="333dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/txtapropos"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imgDrive"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:contentDescription="@string/google_drive_logo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAPropos"
        app:srcCompat="@mipmap/drive_logo_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>