<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E37499"
    tools:context=".SelectionActivity">

    <TextView
        android:id="@+id/txtTitre3"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="@font/allura"
        android:text="@string/questionmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lySelection"
        android:layout_width="327dp"
        android:layout_height="494dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="119dp"
        android:background="#C16886"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtSelection"
            android:layout_width="246dp"
            android:layout_height="40dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/allura"
            android:text="@string/s_lectionnez_votre_jeu"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>